# List of files by type and directory
EXTRA_DIST =

# List of .txt files in . directory
_TXT_FILES = \
  ./extro-bonus.txt \
  ./extro-bonus2.txt \
  ./extro.txt \
  ./intro.txt
EXTRA_DIST += $(_TXT_FILES)

# List of .xpm files in images directory
IMAGES_XPM_FILES = \
  images/icon.xpm
EXTRA_DIST += $(IMAGES_XPM_FILES)

# List of .png files in images/background directory
IMAGESBACKGROUND_PNG_FILES = \
  images/background/arctis.png \
  images/background/ocean.png
EXTRA_DIST += $(IMAGESBACKGROUND_PNG_FILES)

# List of .jpg files in images/background directory
IMAGESBACKGROUND_JPG_FILES = \
  images/background/arctis2.jpg \
  images/background/arctis_dark.jpg \
  images/background/cave2.jpg \
  images/background/extro.jpg \
  images/background/oiltux.jpg
EXTRA_DIST += $(IMAGESBACKGROUND_JPG_FILES)

# List of .png files in images/icons directory
IMAGESICONS_PNG_FILES = \
  images/icons/bgd.png \
  images/icons/bkgrd.png \
  images/icons/default-icon.png \
  images/icons/down.png \
  images/icons/emy.png \
  images/icons/exit.png \
  images/icons/fgd.png \
  images/icons/frgrd.png \
  images/icons/intact.png \
  images/icons/left.png \
  images/icons/objects.png \
  images/icons/properties.png \
  images/icons/right.png \
  images/icons/rubber.png \
  images/icons/save.png \
  images/icons/select-mode1.png \
  images/icons/select-mode2.png \
  images/icons/select-one.png \
  images/icons/select.png \
  images/icons/settings.png \
  images/icons/test-level.png \
  images/icons/tilegroup.png \
  images/icons/up.png
EXTRA_DIST += $(IMAGESICONS_PNG_FILES)

# List of .png files in images/shared directory
IMAGESSHARED_PNG_FILES = \
  images/shared/1up.png \
  images/shared/bouncingsnowball-left-0.png \
  images/shared/bouncingsnowball-left-1.png \
  images/shared/bouncingsnowball-left-2.png \
  images/shared/bouncingsnowball-left-3.png \
  images/shared/bouncingsnowball-left-4.png \
  images/shared/bouncingsnowball-left-5.png \
  images/shared/bouncingsnowball-right-0.png \
  images/shared/bouncingsnowball-right-1.png \
  images/shared/bouncingsnowball-right-2.png \
  images/shared/bouncingsnowball-right-3.png \
  images/shared/bouncingsnowball-right-4.png \
  images/shared/bouncingsnowball-right-5.png \
  images/shared/bullet-1.png \
  images/shared/bullet-2.png \
  images/shared/bullet-3.png \
  images/shared/bullet-4.png \
  images/shared/cloud-00.png \
  images/shared/cloud-01.png \
  images/shared/cloud-02.png \
  images/shared/cloud-03.png \
  images/shared/cloud-10.png \
  images/shared/cloud-11.png \
  images/shared/cloud-12.png \
  images/shared/cloud-13.png \
  images/shared/cloud.png \
  images/shared/egg.png \
  images/shared/firetux-duck-left.png \
  images/shared/firetux-duck-right.png \
  images/shared/firetux-grab-left-0.png \
  images/shared/firetux-grab-right-0.png \
  images/shared/firetux-jump-left-0.png \
  images/shared/firetux-jump-right-0.png \
  images/shared/firetux-kick-left-0.png \
  images/shared/firetux-kick-right-0.png \
  images/shared/firetux-skid-left.png \
  images/shared/firetux-skid-right.png \
  images/shared/firetux-stand-left.png \
  images/shared/firetux-stand-right.png \
  images/shared/firetux-walk-left-0.png \
  images/shared/firetux-walk-left-1.png \
  images/shared/firetux-walk-left-2.png \
  images/shared/firetux-walk-left-3.png \
  images/shared/firetux-walk-left-4.png \
  images/shared/firetux-walk-left-5.png \
  images/shared/firetux-walk-right-0.png \
  images/shared/firetux-walk-right-1.png \
  images/shared/firetux-walk-right-2.png \
  images/shared/firetux-walk-right-3.png \
  images/shared/firetux-walk-right-4.png \
  images/shared/firetux-walk-right-5.png \
  images/shared/fish-down-0.png \
  images/shared/fish-left-0.png \
  images/shared/fish-left-1.png \
  images/shared/flag-0.png \
  images/shared/flag-1.png \
  images/shared/flame-0.png \
  images/shared/flame-1.png \
  images/shared/flyingsnowball-left-0.png \
  images/shared/flyingsnowball-left-1.png \
  images/shared/iceflower-1.png \
  images/shared/iceflower-2.png \
  images/shared/iceflower-3.png \
  images/shared/iceflower.png \
  images/shared/jumpy-left-down-0.png \
  images/shared/jumpy-left-middle-0.png \
  images/shared/jumpy-left-up-0.png \
  images/shared/largetux-grab-left-0.png \
  images/shared/largetux-grab-right-0.png \
  images/shared/largetux-jump-left-0.png \
  images/shared/largetux-jump-right-0.png \
  images/shared/largetux-kick-left-0.png \
  images/shared/largetux-kick-right-0.png \
  images/shared/largetux-skid-left.png \
  images/shared/largetux-skid-right.png \
  images/shared/largetux-stand-left.png \
  images/shared/largetux-stand-right.png \
  images/shared/largetux-star-0.png \
  images/shared/largetux-star-1.png \
  images/shared/largetux-star-2.png \
  images/shared/largetux-walk-left-0.png \
  images/shared/largetux-walk-left-1.png \
  images/shared/largetux-walk-left-2.png \
  images/shared/largetux-walk-left-3.png \
  images/shared/largetux-walk-left-4.png \
  images/shared/largetux-walk-left-5.png \
  images/shared/largetux-walk-right-0.png \
  images/shared/largetux-walk-right-1.png \
  images/shared/largetux-walk-right-2.png \
  images/shared/largetux-walk-right-3.png \
  images/shared/largetux-walk-right-4.png \
  images/shared/largetux-walk-right-5.png \
  images/shared/mrbomb-explosion-1.png \
  images/shared/mrbomb-explosion.png \
  images/shared/mrbomb-left-0.png \
  images/shared/mrbomb-left-1.png \
  images/shared/mrbomb-left-2.png \
  images/shared/mrbomb-left-3.png \
  images/shared/mrbomb-right-0.png \
  images/shared/mrbomb-right-1.png \
  images/shared/mrbomb-right-2.png \
  images/shared/mrbomb-right-3.png \
  images/shared/mrbombx-left-0.png \
  images/shared/mrbombx-left-1.png \
  images/shared/mrbombx-right-0.png \
  images/shared/mrbombx-right-1.png \
  images/shared/mriceblock-flat-left.png \
  images/shared/mriceblock-flat-right.png \
  images/shared/mriceblock-left-0.png \
  images/shared/mriceblock-left-1.png \
  images/shared/mriceblock-left-2.png \
  images/shared/mriceblock-left-3.png \
  images/shared/mriceblock-right-0.png \
  images/shared/mriceblock-right-1.png \
  images/shared/mriceblock-right-2.png \
  images/shared/mriceblock-right-3.png \
  images/shared/pole.png \
  images/shared/poletop.png \
  images/shared/resetpoint.png \
  images/shared/smalltux-gameover-0.png \
  images/shared/smalltux-gameover-1.png \
  images/shared/smalltux-grab-left-0.png \
  images/shared/smalltux-grab-right-0.png \
  images/shared/smalltux-jump-left.png \
  images/shared/smalltux-jump-right.png \
  images/shared/smalltux-kick-left-0.png \
  images/shared/smalltux-kick-right-0.png \
  images/shared/smalltux-left-1.png \
  images/shared/smalltux-left-2.png \
  images/shared/smalltux-left-3.png \
  images/shared/smalltux-left-4.png \
  images/shared/smalltux-left-5.png \
  images/shared/smalltux-left-6.png \
  images/shared/smalltux-left-7.png \
  images/shared/smalltux-left-8.png \
  images/shared/smalltux-right-1.png \
  images/shared/smalltux-right-2.png \
  images/shared/smalltux-right-3.png \
  images/shared/smalltux-right-4.png \
  images/shared/smalltux-right-5.png \
  images/shared/smalltux-right-6.png \
  images/shared/smalltux-right-7.png \
  images/shared/smalltux-right-8.png \
  images/shared/smalltux-skid-left.png \
  images/shared/smalltux-skid-right.png \
  images/shared/smalltux-star-0.png \
  images/shared/smalltux-star-1.png \
  images/shared/smalltux-star-2.png \
  images/shared/snow0.png \
  images/shared/snow1.png \
  images/shared/snow2.png \
  images/shared/snowball-left-0.png \
  images/shared/snowball-left-1.png \
  images/shared/snowball-left-2.png \
  images/shared/snowball-right-0.png \
  images/shared/snowball-right-1.png \
  images/shared/snowball-right-2.png \
  images/shared/snowball-squished-left.png \
  images/shared/snowball-squished-right.png \
  images/shared/spiky-left-0.png \
  images/shared/spiky-left-1.png \
  images/shared/spiky-left-2.png \
  images/shared/spiky-right-0.png \
  images/shared/spiky-right-1.png \
  images/shared/spiky-right-2.png \
  images/shared/stalactite-broken.png \
  images/shared/stalactite.png \
  images/shared/star-1.png \
  images/shared/star-2.png \
  images/shared/star-3.png \
  images/shared/star-4.png \
  images/shared/star.png \
  images/shared/tux-duck-left.png \
  images/shared/tux-duck-right.png \
  images/shared/tux-duck.png \
  images/shared/tux-life.png \
  images/shared/water.png \
  images/shared/waves-0.png \
  images/shared/waves-1.png \
  images/shared/waves-2.png
EXTRA_DIST += $(IMAGESSHARED_PNG_FILES)

# List of .png files in images/status directory
IMAGESSTATUS_PNG_FILES = \
  images/status/back.png \
  images/status/checkbox-checked.png \
  images/status/checkbox.png \
  images/status/choose-level-subset.png \
  images/status/choose-subset.png \
  images/status/letters-black-small.png \
  images/status/letters-black.png \
  images/status/letters-blue-small.png \
  images/status/letters-blue.png \
  images/status/letters-gold-small.png \
  images/status/letters-gold.png \
  images/status/letters-green.png \
  images/status/letters-red.png \
  images/status/letters-silver.png \
  images/status/letters-white-big.png \
  images/status/letters-white-small.png \
  images/status/letters-white.png \
  images/status/level-subset-info.png \
  images/status/lives.png \
  images/status/mousecursor.png \
  images/status/numbers.png \
  images/status/score.png \
  images/status/select-cursor.png
EXTRA_DIST += $(IMAGESSTATUS_PNG_FILES)

# List of .png files in images/worldmap directory
IMAGESWORLDMAP_PNG_FILES = \
  images/worldmap/castle1.png \
  images/worldmap/castle2.png \
  images/worldmap/castle3.png \
  images/worldmap/castle4.png \
  images/worldmap/castle5.png \
  images/worldmap/castle6.png \
  images/worldmap/castle7.png \
  images/worldmap/castle8.png \
  images/worldmap/castle9.png \
  images/worldmap/firetux.png \
  images/worldmap/ground.png \
  images/worldmap/igloo1.png \
  images/worldmap/igloo2.png \
  images/worldmap/leveldot_green.png \
  images/worldmap/leveldot_red.png \
  images/worldmap/levelmarker.png \
  images/worldmap/placeholder.png \
  images/worldmap/road_cross.png \
  images/worldmap/road_e.png \
  images/worldmap/road_end.png \
  images/worldmap/road_h.png \
  images/worldmap/road_h_stop.png \
  images/worldmap/road_n.png \
  images/worldmap/road_ne.png \
  images/worldmap/road_nes.png \
  images/worldmap/road_nesw.png \
  images/worldmap/road_new.png \
  images/worldmap/road_ns.png \
  images/worldmap/road_nsw.png \
  images/worldmap/road_nw.png \
  images/worldmap/road_nws.png \
  images/worldmap/road_s.png \
  images/worldmap/road_se.png \
  images/worldmap/road_sw.png \
  images/worldmap/road_swe.png \
  images/worldmap/road_v.png \
  images/worldmap/road_v_stop.png \
  images/worldmap/road_w.png \
  images/worldmap/road_we.png \
  images/worldmap/road_ws.png \
  images/worldmap/smalltux.png \
  images/worldmap/snow1.png \
  images/worldmap/snow10.png \
  images/worldmap/snow11.png \
  images/worldmap/snow12.png \
  images/worldmap/snow13.png \
  images/worldmap/snow2.png \
  images/worldmap/snow3.png \
  images/worldmap/snow4.png \
  images/worldmap/snow5.png \
  images/worldmap/snow6.png \
  images/worldmap/snow7.png \
  images/worldmap/snow8.png \
  images/worldmap/snow9.png \
  images/worldmap/snowman.png \
  images/worldmap/teleporter.png \
  images/worldmap/tux.png \
  images/worldmap/water.png \
  images/worldmap/wood1.png \
  images/worldmap/wood10.png \
  images/worldmap/wood11.png \
  images/worldmap/wood12.png \
  images/worldmap/wood13.png \
  images/worldmap/wood2.png \
  images/worldmap/wood3.png \
  images/worldmap/wood4.png \
  images/worldmap/wood5.png \
  images/worldmap/wood6.png \
  images/worldmap/wood7.png \
  images/worldmap/wood8.png \
  images/worldmap/wood9.png
EXTRA_DIST += $(IMAGESWORLDMAP_PNG_FILES)

# List of .stwt files in images/worldmap directory
IMAGESWORLDMAP_STWT_FILES = \
  images/worldmap/antarctica.stwt
EXTRA_DIST += $(IMAGESWORLDMAP_STWT_FILES)

# List of .png files in images/title directory
IMAGESTITLE_PNG_FILES = \
  images/title/loading.png \
  images/title/logo.png \
  images/title/logo2.png
EXTRA_DIST += $(IMAGESTITLE_PNG_FILES)

# List of .jpg files in images/title directory
IMAGESTITLE_JPG_FILES = \
  images/title/background.jpg
EXTRA_DIST += $(IMAGESTITLE_JPG_FILES)

# List of .png files in images/tilesets directory
IMAGESTILESETS_PNG_FILES = \
  images/tilesets/background1.png \
  images/tilesets/background2.png \
  images/tilesets/background3.png \
  images/tilesets/background4.png \
  images/tilesets/background5.png \
  images/tilesets/background6.png \
  images/tilesets/background7.png \
  images/tilesets/background8.png \
  images/tilesets/backgroundtile1.png \
  images/tilesets/backgroundtile2.png \
  images/tilesets/backgroundtile3.png \
  images/tilesets/backgroundtile4.png \
  images/tilesets/backgroundtile5.png \
  images/tilesets/bkgd-00.png \
  images/tilesets/bkgd-01.png \
  images/tilesets/bkgd-02.png \
  images/tilesets/bkgd-03.png \
  images/tilesets/bkgd-10.png \
  images/tilesets/bkgd-11.png \
  images/tilesets/bkgd-12.png \
  images/tilesets/bkgd-13.png \
  images/tilesets/black.png \
  images/tilesets/block1.png \
  images/tilesets/block10.png \
  images/tilesets/block11.png \
  images/tilesets/block2.png \
  images/tilesets/block3.png \
  images/tilesets/block4.png \
  images/tilesets/block5.png \
  images/tilesets/block6.png \
  images/tilesets/block7.png \
  images/tilesets/block8.png \
  images/tilesets/block9.png \
  images/tilesets/bonus-1up.png \
  images/tilesets/bonus-flower.png \
  images/tilesets/bonus-grow.png \
  images/tilesets/bonus-herring.png \
  images/tilesets/bonus-invisible.png \
  images/tilesets/bonus1.png \
  images/tilesets/bonus2-1.png \
  images/tilesets/bonus2-2.png \
  images/tilesets/bonus2-3.png \
  images/tilesets/bonus2-4.png \
  images/tilesets/bonus2-5.png \
  images/tilesets/bonus2-d.png \
  images/tilesets/box-empty.png \
  images/tilesets/box-full.png \
  images/tilesets/brick0.png \
  images/tilesets/brick1.png \
  images/tilesets/cloud-00.png \
  images/tilesets/cloud-01.png \
  images/tilesets/cloud-02.png \
  images/tilesets/cloud-03.png \
  images/tilesets/cloud-10.png \
  images/tilesets/cloud-11.png \
  images/tilesets/cloud-12.png \
  images/tilesets/cloud-13.png \
  images/tilesets/coin1.png \
  images/tilesets/coin2.png \
  images/tilesets/coin3.png \
  images/tilesets/darksnow1.png \
  images/tilesets/darksnow10.png \
  images/tilesets/darksnow11.png \
  images/tilesets/darksnow12.png \
  images/tilesets/darksnow13.png \
  images/tilesets/darksnow14.png \
  images/tilesets/darksnow15.png \
  images/tilesets/darksnow2.png \
  images/tilesets/darksnow3.png \
  images/tilesets/darksnow4.png \
  images/tilesets/darksnow5.png \
  images/tilesets/darksnow6.png \
  images/tilesets/darksnow7.png \
  images/tilesets/darksnow8.png \
  images/tilesets/darksnow9.png \
  images/tilesets/distro-0.png \
  images/tilesets/distro-1.png \
  images/tilesets/distro-2.png \
  images/tilesets/distro-3.png \
  images/tilesets/endseq.png \
  images/tilesets/exitbg.png \
  images/tilesets/exitfg.png \
  images/tilesets/finalgoal.png \
  images/tilesets/flag-0.png \
  images/tilesets/flag-1.png \
  images/tilesets/goal1-1.png \
  images/tilesets/goal1-2.png \
  images/tilesets/goal1-3.png \
  images/tilesets/goal1-4.png \
  images/tilesets/goal1-5.png \
  images/tilesets/goal2-1.png \
  images/tilesets/goal2-2.png \
  images/tilesets/goal2-3.png \
  images/tilesets/goal2-4.png \
  images/tilesets/goal2-5.png \
  images/tilesets/grey.png \
  images/tilesets/grey2.png \
  images/tilesets/grey3.png \
  images/tilesets/grey4.png \
  images/tilesets/grey5.png \
  images/tilesets/grey6.png \
  images/tilesets/lava1-1.png \
  images/tilesets/lava1-2.png \
  images/tilesets/lava1-3.png \
  images/tilesets/lava1-4.png \
  images/tilesets/lava2-1.png \
  images/tilesets/lava2-2.png \
  images/tilesets/lava2-3.png \
  images/tilesets/lava2-4.png \
  images/tilesets/nolok1.png \
  images/tilesets/nolok2.png \
  images/tilesets/notile.png \
  images/tilesets/pipe1.png \
  images/tilesets/pipe2.png \
  images/tilesets/pipe3.png \
  images/tilesets/pipe4.png \
  images/tilesets/pipe5.png \
  images/tilesets/pipe6.png \
  images/tilesets/pipe7.png \
  images/tilesets/pipe8.png \
  images/tilesets/pole.png \
  images/tilesets/poletop.png \
  images/tilesets/run1.png \
  images/tilesets/run2.png \
  images/tilesets/run3.png \
  images/tilesets/run4.png \
  images/tilesets/snow1.png \
  images/tilesets/snow10.png \
  images/tilesets/snow11.png \
  images/tilesets/snow12.png \
  images/tilesets/snow13.png \
  images/tilesets/snow14.png \
  images/tilesets/snow15.png \
  images/tilesets/snow16.png \
  images/tilesets/snow17.png \
  images/tilesets/snow18.png \
  images/tilesets/snow19.png \
  images/tilesets/snow2.png \
  images/tilesets/snow20.png \
  images/tilesets/snow21.png \
  images/tilesets/snow22.png \
  images/tilesets/snow23.png \
  images/tilesets/snow24.png \
  images/tilesets/snow25.png \
  images/tilesets/snow3.png \
  images/tilesets/snow4.png \
  images/tilesets/snow5.png \
  images/tilesets/snow6.png \
  images/tilesets/snow7.png \
  images/tilesets/snow8.png \
  images/tilesets/snow9.png \
  images/tilesets/snowbg1.png \
  images/tilesets/snowbg2.png \
  images/tilesets/snowbg3.png \
  images/tilesets/snowbg4.png \
  images/tilesets/tree.png \
  images/tilesets/water-trans.png \
  images/tilesets/water.png \
  images/tilesets/waterfall-trans1-1-1.png \
  images/tilesets/waterfall-trans1-1-2.png \
  images/tilesets/waterfall-trans1-1-3.png \
  images/tilesets/waterfall-trans1-1-4.png \
  images/tilesets/waterfall-trans1-2-1.png \
  images/tilesets/waterfall-trans1-2-2.png \
  images/tilesets/waterfall-trans1-2-3.png \
  images/tilesets/waterfall-trans1-2-4.png \
  images/tilesets/waterfall-trans1-3-1.png \
  images/tilesets/waterfall-trans1-3-2.png \
  images/tilesets/waterfall-trans1-3-3.png \
  images/tilesets/waterfall-trans1-3-4.png \
  images/tilesets/waterfall-trans1-4-1.png \
  images/tilesets/waterfall-trans1-4-2.png \
  images/tilesets/waterfall-trans1-4-3.png \
  images/tilesets/waterfall-trans1-4-4.png \
  images/tilesets/waterfall-trans2-1-1.png \
  images/tilesets/waterfall-trans2-1-2.png \
  images/tilesets/waterfall-trans2-1-3.png \
  images/tilesets/waterfall-trans2-1-4.png \
  images/tilesets/waterfall-trans2-2-1.png \
  images/tilesets/waterfall-trans2-2-2.png \
  images/tilesets/waterfall-trans2-2-3.png \
  images/tilesets/waterfall-trans2-2-4.png \
  images/tilesets/waterfall-trans2-3-1.png \
  images/tilesets/waterfall-trans2-3-2.png \
  images/tilesets/waterfall-trans2-3-3.png \
  images/tilesets/waterfall-trans2-3-4.png \
  images/tilesets/waterfall-trans2-4-1.png \
  images/tilesets/waterfall-trans2-4-2.png \
  images/tilesets/waterfall-trans2-4-3.png \
  images/tilesets/waterfall-trans2-4-4.png \
  images/tilesets/waterfall-trans3-1-1.png \
  images/tilesets/waterfall-trans3-1-2.png \
  images/tilesets/waterfall-trans3-1-3.png \
  images/tilesets/waterfall-trans3-1-4.png \
  images/tilesets/waterfall-trans3-2-1.png \
  images/tilesets/waterfall-trans3-2-2.png \
  images/tilesets/waterfall-trans3-2-3.png \
  images/tilesets/waterfall-trans3-2-4.png \
  images/tilesets/waterfall-trans3-3-1.png \
  images/tilesets/waterfall-trans3-3-2.png \
  images/tilesets/waterfall-trans3-3-3.png \
  images/tilesets/waterfall-trans3-3-4.png \
  images/tilesets/waterfall-trans3-4-1.png \
  images/tilesets/waterfall-trans3-4-2.png \
  images/tilesets/waterfall-trans3-4-3.png \
  images/tilesets/waterfall-trans3-4-4.png \
  images/tilesets/waterfall-trans4-1-1.png \
  images/tilesets/waterfall-trans4-1-2.png \
  images/tilesets/waterfall-trans4-1-3.png \
  images/tilesets/waterfall-trans4-1-4.png \
  images/tilesets/waterfall-trans4-2-1.png \
  images/tilesets/waterfall-trans4-2-2.png \
  images/tilesets/waterfall-trans4-2-3.png \
  images/tilesets/waterfall-trans4-2-4.png \
  images/tilesets/waterfall-trans4-3-1.png \
  images/tilesets/waterfall-trans4-3-2.png \
  images/tilesets/waterfall-trans4-3-3.png \
  images/tilesets/waterfall-trans4-3-4.png \
  images/tilesets/waterfall-trans4-4-1.png \
  images/tilesets/waterfall-trans4-4-2.png \
  images/tilesets/waterfall-trans4-4-3.png \
  images/tilesets/waterfall-trans4-4-4.png \
  images/tilesets/waterfall-trans5-1-1.png \
  images/tilesets/waterfall-trans5-1-2.png \
  images/tilesets/waterfall-trans5-1-3.png \
  images/tilesets/waterfall-trans5-1-4.png \
  images/tilesets/waterfall-trans5-2-1.png \
  images/tilesets/waterfall-trans5-2-2.png \
  images/tilesets/waterfall-trans5-2-3.png \
  images/tilesets/waterfall-trans5-2-4.png \
  images/tilesets/waterfall-trans5-3-1.png \
  images/tilesets/waterfall-trans5-3-2.png \
  images/tilesets/waterfall-trans5-3-3.png \
  images/tilesets/waterfall-trans5-3-4.png \
  images/tilesets/waterfall-trans5-4-1.png \
  images/tilesets/waterfall-trans5-4-2.png \
  images/tilesets/waterfall-trans5-4-3.png \
  images/tilesets/waterfall-trans5-4-4.png \
  images/tilesets/waterfall0-0-1.png \
  images/tilesets/waterfall0-0-2.png \
  images/tilesets/waterfall0-0-3.png \
  images/tilesets/waterfall0-0-4.png \
  images/tilesets/waterfall0-1-1.png \
  images/tilesets/waterfall0-1-2.png \
  images/tilesets/waterfall0-1-3.png \
  images/tilesets/waterfall0-1-4.png \
  images/tilesets/waterfall0-2-1.png \
  images/tilesets/waterfall0-2-2.png \
  images/tilesets/waterfall0-2-3.png \
  images/tilesets/waterfall0-2-4.png \
  images/tilesets/waterfall1-0-1.png \
  images/tilesets/waterfall1-0-2.png \
  images/tilesets/waterfall1-0-3.png \
  images/tilesets/waterfall1-0-4.png \
  images/tilesets/waterfall1-1-1.png \
  images/tilesets/waterfall1-1-2.png \
  images/tilesets/waterfall1-1-3.png \
  images/tilesets/waterfall1-1-4.png \
  images/tilesets/waterfall1-2-1.png \
  images/tilesets/waterfall1-2-2.png \
  images/tilesets/waterfall1-2-3.png \
  images/tilesets/waterfall1-2-4.png \
  images/tilesets/waterfall1-3-1.png \
  images/tilesets/waterfall1-3-2.png \
  images/tilesets/waterfall1-3-3.png \
  images/tilesets/waterfall1-3-4.png \
  images/tilesets/waterfall1-4-1.png \
  images/tilesets/waterfall1-4-2.png \
  images/tilesets/waterfall1-4-3.png \
  images/tilesets/waterfall1-4-4.png \
  images/tilesets/waterfall1-5-1.png \
  images/tilesets/waterfall1-5-2.png \
  images/tilesets/waterfall1-5-3.png \
  images/tilesets/waterfall1-5-4.png \
  images/tilesets/waterfall2-1-1.png \
  images/tilesets/waterfall2-1-2.png \
  images/tilesets/waterfall2-1-3.png \
  images/tilesets/waterfall2-1-4.png \
  images/tilesets/waterfall2-2-1.png \
  images/tilesets/waterfall2-2-2.png \
  images/tilesets/waterfall2-2-3.png \
  images/tilesets/waterfall2-2-4.png \
  images/tilesets/waterfall2-3-1.png \
  images/tilesets/waterfall2-3-2.png \
  images/tilesets/waterfall2-3-3.png \
  images/tilesets/waterfall2-3-4.png \
  images/tilesets/waterfall2-4-1.png \
  images/tilesets/waterfall2-4-2.png \
  images/tilesets/waterfall2-4-3.png \
  images/tilesets/waterfall2-4-4.png \
  images/tilesets/waterfall3-1-1.png \
  images/tilesets/waterfall3-1-2.png \
  images/tilesets/waterfall3-1-3.png \
  images/tilesets/waterfall3-1-4.png \
  images/tilesets/waterfall3-2-1.png \
  images/tilesets/waterfall3-2-2.png \
  images/tilesets/waterfall3-2-3.png \
  images/tilesets/waterfall3-2-4.png \
  images/tilesets/waterfall3-3-1.png \
  images/tilesets/waterfall3-3-2.png \
  images/tilesets/waterfall3-3-3.png \
  images/tilesets/waterfall3-3-4.png \
  images/tilesets/waterfall3-4-1.png \
  images/tilesets/waterfall3-4-2.png \
  images/tilesets/waterfall3-4-3.png \
  images/tilesets/waterfall3-4-4.png \
  images/tilesets/waterfall4-1-1.png \
  images/tilesets/waterfall4-1-2.png \
  images/tilesets/waterfall4-1-3.png \
  images/tilesets/waterfall4-1-4.png \
  images/tilesets/waterfall4-2-1.png \
  images/tilesets/waterfall4-2-2.png \
  images/tilesets/waterfall4-2-3.png \
  images/tilesets/waterfall4-2-4.png \
  images/tilesets/waterfall4-3-1.png \
  images/tilesets/waterfall4-3-2.png \
  images/tilesets/waterfall4-3-3.png \
  images/tilesets/waterfall4-3-4.png \
  images/tilesets/waterfall4-4-1.png \
  images/tilesets/waterfall4-4-2.png \
  images/tilesets/waterfall4-4-3.png \
  images/tilesets/waterfall4-4-4.png \
  images/tilesets/waterfall5-1-1.png \
  images/tilesets/waterfall5-1-2.png \
  images/tilesets/waterfall5-1-3.png \
  images/tilesets/waterfall5-1-4.png \
  images/tilesets/waterfall5-2-1.png \
  images/tilesets/waterfall5-2-2.png \
  images/tilesets/waterfall5-2-3.png \
  images/tilesets/waterfall5-2-4.png \
  images/tilesets/waterfall5-3-1.png \
  images/tilesets/waterfall5-3-2.png \
  images/tilesets/waterfall5-3-3.png \
  images/tilesets/waterfall5-3-4.png \
  images/tilesets/waterfall5-4-1.png \
  images/tilesets/waterfall5-4-2.png \
  images/tilesets/waterfall5-4-3.png \
  images/tilesets/waterfall5-4-4.png \
  images/tilesets/waves-0.png \
  images/tilesets/waves-1.png \
  images/tilesets/waves-2.png \
  images/tilesets/waves-trans-0.png \
  images/tilesets/waves-trans-1.png \
  images/tilesets/waves-trans-2.png
EXTRA_DIST += $(IMAGESTILESETS_PNG_FILES)

# List of .stgt files in images/tilesets directory
IMAGESTILESETS_STGT_FILES = \
  images/tilesets/background.stgt \
  images/tilesets/block.stgt \
  images/tilesets/darksnow.stgt \
  images/tilesets/grey.stgt \
  images/tilesets/main.stgt \
  images/tilesets/misc.stgt \
  images/tilesets/snow.stgt \
  images/tilesets/supertux.stgt
EXTRA_DIST += $(IMAGESTILESETS_STGT_FILES)

# List of .stl files in levels/bonus1 directory
LEVELSBONUS1_STL_FILES = \
  levels/bonus1/abednego-level1.stl \
  levels/bonus1/abednego-level2.stl \
  levels/bonus1/abednego-level3.stl \
  levels/bonus1/abednego-level4.stl \
  levels/bonus1/bonus-level1.stl \
  levels/bonus1/bonus-level2.stl \
  levels/bonus1/bonus-level3.stl \
  levels/bonus1/bonus-level4.stl \
  levels/bonus1/bonus-level5.stl \
  levels/bonus1/matr1x-level1.stl \
  levels/bonus1/matr1x-level2.stl \
  levels/bonus1/matr1x-level3.stl \
  levels/bonus1/thompson-level1.stl \
  levels/bonus1/thompson-level2.stl \
  levels/bonus1/torfi-level1.stl \
  levels/bonus1/torfi-level2.stl \
  levels/bonus1/torfi-level3.stl \
  levels/bonus1/wansti-level1.stl \
  levels/bonus1/wansti-level2.stl \
  levels/bonus1/wansti-level3.stl \
  levels/bonus1/wansti-level4.stl \
  levels/bonus1/wansti-level5.stl
EXTRA_DIST += $(LEVELSBONUS1_STL_FILES)

# List of .stl files in levels/bonus2 directory
LEVELSBONUS2_STL_FILES = \
  levels/bonus2/level1.stl \
  levels/bonus2/level10.stl \
  levels/bonus2/level11.stl \
  levels/bonus2/level12.stl \
  levels/bonus2/level13.stl \
  levels/bonus2/level14.stl \
  levels/bonus2/level15.stl \
  levels/bonus2/level16.stl \
  levels/bonus2/level17.stl \
  levels/bonus2/level18.stl \
  levels/bonus2/level19.stl \
  levels/bonus2/level2.stl \
  levels/bonus2/level20.stl \
  levels/bonus2/level21.stl \
  levels/bonus2/level22.stl \
  levels/bonus2/level23.stl \
  levels/bonus2/level24.stl \
  levels/bonus2/level25.stl \
  levels/bonus2/level26.stl \
  levels/bonus2/level27.stl \
  levels/bonus2/level28.stl \
  levels/bonus2/level3.stl \
  levels/bonus2/level4.stl \
  levels/bonus2/level5.stl \
  levels/bonus2/level6.stl \
  levels/bonus2/level7.stl \
  levels/bonus2/level8.stl \
  levels/bonus2/level9.stl
EXTRA_DIST += $(LEVELSBONUS2_STL_FILES)

# List of .stl files in levels/misc directory
LEVELSMISC_STL_FILES = \
  levels/misc/menu.stl
EXTRA_DIST += $(LEVELSMISC_STL_FILES)

# List of .stl files in levels/world1 directory
LEVELSWORLD1_STL_FILES = \
  levels/world1/level1.stl \
  levels/world1/level10.stl \
  levels/world1/level11.stl \
  levels/world1/level12.stl \
  levels/world1/level13.stl \
  levels/world1/level14.stl \
  levels/world1/level15.stl \
  levels/world1/level16.stl \
  levels/world1/level17.stl \
  levels/world1/level18.stl \
  levels/world1/level19.stl \
  levels/world1/level2.stl \
  levels/world1/level20.stl \
  levels/world1/level21.stl \
  levels/world1/level22.stl \
  levels/world1/level23.stl \
  levels/world1/level24.stl \
  levels/world1/level25.stl \
  levels/world1/level26.stl \
  levels/world1/level3.stl \
  levels/world1/level4.stl \
  levels/world1/level5.stl \
  levels/world1/level6.stl \
  levels/world1/level7.stl \
  levels/world1/level8.stl \
  levels/world1/level9.stl
EXTRA_DIST += $(LEVELSWORLD1_STL_FILES)

# List of .ogg files in music directory
MUSIC_OGG_FILES = \
  music/credits.ogg
EXTRA_DIST += $(MUSIC_OGG_FILES)

# List of .mod files in music directory
MUSIC_MOD_FILES = \
  music/Mortimers_chipdisko-fast.mod \
  music/Mortimers_chipdisko.mod \
  music/cave-fast.mod \
  music/cave.mod \
  music/fortress-fast.mod \
  music/fortress.mod \
  music/fortress2-fast.mod \
  music/fortress2.mod \
  music/leveldone.mod \
  music/salcon-fast.mod \
  music/salcon.mod \
  music/theme.mod
EXTRA_DIST += $(MUSIC_MOD_FILES)

# List of .wav files in sounds directory
SOUNDS_WAV_FILES = \
  sounds/bigjump.wav \
  sounds/brick.wav \
  sounds/bump-upgrade.wav \
  sounds/coffee.wav \
  sounds/distro.wav \
  sounds/excellent.wav \
  sounds/explode.wav \
  sounds/fall.wav \
  sounds/herring.wav \
  sounds/hurt.wav \
  sounds/jump.wav \
  sounds/kick.wav \
  sounds/lifeup.wav \
  sounds/ricochet.wav \
  sounds/shoot.wav \
  sounds/skid.wav \
  sounds/squish.wav \
  sounds/stomp.wav \
  sounds/upgrade.wav \
  sounds/warp.wav
EXTRA_DIST += $(SOUNDS_WAV_FILES)

# Install the data files
nobase_dist_pkgdata_DATA = $(EXTRA_DIST)
